// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Migrator (mongo) - explicit with explicit migrations class only (#6099): migrator-migrations-list 1`] = `
[
  "[query] db.begin();",
  "[query] db.getCollection('mikro_orm_migrations').find({}, { session: '[ClientSession]' }).sort([ [ '_id', 1 ] ]).toArray(); [took 2 ms, 0 results]",
  "[migrator] Processing 'MigrationTest1'",
  "[query] db.getCollection('books-table').deleteMany({ foo: true }, { session: '[ClientSession]' }); [took 1 ms]",
  "[query] db.getCollection('mikro_orm_migrations').insertOne({ name: 'MigrationTest1', executed_at: ISODate('2024-10-02T13:37:24.487Z') }, { session: '[ClientSession]' }); [took 3 ms]",
  "[migrator] Applied 'MigrationTest1'",
  "[query] db.commit();",
]
`;

exports[`Migrator (mongo) generate blank migration: migration-dump 1`] = `
{
  "code": "import { Migration } from '@mikro-orm/migrations-mongodb';

export class Migration20191013214813 extends Migration {

  async up(): Promise<void> {
  }

}
",
  "diff": {
    "down": [],
    "up": [],
  },
  "fileName": "Migration20191013214813.ts",
}
`;

exports[`Migrator (mongo) generate js schema migration: migration-js-dump 1`] = `
{
  "code": "'use strict';
Object.defineProperty(exports, '__esModule', { value: true });
const { Migration } = require('@mikro-orm/migrations-mongodb');

class Migration20191013214813 extends Migration {

  async up() {
  }

}
exports.Migration20191013214813 = Migration20191013214813;
",
  "diff": {
    "down": [],
    "up": [],
  },
  "fileName": "Migration20191013214813.js",
}
`;

exports[`Migrator (mongo) generate migration with custom name with name option: migration-dump 1`] = `
{
  "code": "import { Migration } from '@mikro-orm/migrations-mongodb';

export class Migration20191013214813_custom_name extends Migration {

  async up(): Promise<void> {
  }

}
",
  "diff": {
    "down": [],
    "up": [],
  },
  "fileName": "migration20191013214813_custom_name.ts",
}
`;

exports[`Migrator (mongo) generate migration with custom name: migration-dump 1`] = `
{
  "code": "import { Migration } from '@mikro-orm/migrations-mongodb';

export class Migration20191013214813 extends Migration {

  async up(): Promise<void> {
  }

}
",
  "diff": {
    "down": [],
    "up": [],
  },
  "fileName": "migration-20191013214813.ts",
}
`;

exports[`Migrator (mongo) up/down params [all or nothing disabled]: all-or-nothing-disabled 1`] = `
[
  "db.getCollection('mikro_orm_migrations').find({}, {}).sort([ [ '_id', 1 ] ]).toArray();",
  "[migrator] Processing 'Migration20191013214813'",
  "db.begin();",
  "db.commit();",
  "db.getCollection('mikro_orm_migrations').insertOne({ name: 'Migration20191013214813', executed_at: ISODate(...) }, {});",
  "[migrator] Applied 'Migration20191013214813'",
  "db.getCollection('mikro_orm_migrations').find({}, {}).sort([ [ '_id', 1 ] ]).toArray();",
  "[migrator] Processing 'Migration20191013214813'",
  "db.begin();",
  "db.commit();",
  "db.getCollection('mikro_orm_migrations').deleteMany({ name: { '$in': [ 'Migration20191013214813', 'Migration20191013214813' ] } }, {});",
  "[migrator] Reverted 'Migration20191013214813'",
  "db.getCollection('mikro_orm_migrations').find({}, {}).sort([ [ '_id', 1 ] ]).toArray();",
  "[migrator] Processing 'Migration20191013214813'",
  "db.begin();",
  "db.commit();",
  "db.getCollection('mikro_orm_migrations').insertOne({ name: 'Migration20191013214813', executed_at: ISODate(...) }, {});",
  "[migrator] Applied 'Migration20191013214813'",
  "db.getCollection('mikro_orm_migrations').find({}, {}).sort([ [ '_id', 1 ] ]).toArray();",
  "[migrator] Processing 'Migration20191013214813'",
  "db.begin();",
  "db.commit();",
  "db.getCollection('mikro_orm_migrations').deleteMany({ name: { '$in': [ 'Migration20191013214813', 'Migration20191013214813' ] } }, {});",
  "[migrator] Reverted 'Migration20191013214813'",
  "db.getCollection('mikro_orm_migrations').find({}, {}).sort([ [ '_id', 1 ] ]).toArray();",
  "[migrator] Processing 'Migration20191013214813'",
  "db.begin();",
  "db.commit();",
  "db.getCollection('mikro_orm_migrations').insertOne({ name: 'Migration20191013214813', executed_at: ISODate(...) }, {});",
  "[migrator] Applied 'Migration20191013214813'",
  "db.getCollection('mikro_orm_migrations').find({}, {}).sort([ [ '_id', 1 ] ]).toArray();",
  "db.getCollection('mikro_orm_migrations').find({}, {}).sort([ [ '_id', 1 ] ]).toArray();",
  "[migrator] Processing 'Migration20191013214813'",
  "db.begin();",
  "db.commit();",
  "db.getCollection('mikro_orm_migrations').deleteMany({ name: { '$in': [ 'Migration20191013214813', 'Migration20191013214813' ] } }, {});",
  "[migrator] Reverted 'Migration20191013214813'",
]
`;

exports[`Migrator (mongo) up/down params [all or nothing enabled]: all-or-nothing 1`] = `
[
  "db.begin();",
  "db.getCollection('mikro_orm_migrations').find({}, { session: '[ClientSession]' }).sort([ [ '_id', 1 ] ]).toArray();",
  "[migrator] Processing 'Migration20191013214813'",
  "db.getCollection('mikro_orm_migrations').insertOne({ name: 'Migration20191013214813', executed_at: ISODate('2019-10-13T21:48:13.382Z') }, { session: '[ClientSession]' });",
  "[migrator] Applied 'Migration20191013214813'",
  "db.commit();",
  "db.begin();",
  "db.getCollection('mikro_orm_migrations').find({}, { session: '[ClientSession]' }).sort([ [ '_id', 1 ] ]).toArray();",
  "[migrator] Processing 'Migration20191013214813'",
  "db.getCollection('mikro_orm_migrations').deleteMany({ name: { '$in': [ 'Migration20191013214813', 'Migration20191013214813' ] } }, { session: '[ClientSession]' });",
  "[migrator] Reverted 'Migration20191013214813'",
  "db.commit();",
  "db.begin();",
  "db.getCollection('mikro_orm_migrations').find({}, { session: '[ClientSession]' }).sort([ [ '_id', 1 ] ]).toArray();",
  "[migrator] Processing 'Migration20191013214813'",
  "db.getCollection('mikro_orm_migrations').insertOne({ name: 'Migration20191013214813', executed_at: ISODate('2019-10-13T21:48:13.382Z') }, { session: '[ClientSession]' });",
  "[migrator] Applied 'Migration20191013214813'",
  "db.commit();",
  "db.begin();",
  "db.getCollection('mikro_orm_migrations').find({}, { session: '[ClientSession]' }).sort([ [ '_id', 1 ] ]).toArray();",
  "[migrator] Processing 'Migration20191013214813'",
  "db.getCollection('mikro_orm_migrations').deleteMany({ name: { '$in': [ 'Migration20191013214813', 'Migration20191013214813' ] } }, { session: '[ClientSession]' });",
  "[migrator] Reverted 'Migration20191013214813'",
  "db.commit();",
  "db.begin();",
  "db.getCollection('mikro_orm_migrations').find({}, { session: '[ClientSession]' }).sort([ [ '_id', 1 ] ]).toArray();",
  "[migrator] Processing 'Migration20191013214813'",
  "db.getCollection('mikro_orm_migrations').insertOne({ name: 'Migration20191013214813', executed_at: ISODate('2019-10-13T21:48:13.382Z') }, { session: '[ClientSession]' });",
  "[migrator] Applied 'Migration20191013214813'",
  "db.commit();",
  "db.begin();",
  "db.getCollection('mikro_orm_migrations').find({}, { session: '[ClientSession]' }).sort([ [ '_id', 1 ] ]).toArray();",
  "db.commit();",
  "db.begin();",
  "db.getCollection('mikro_orm_migrations').find({}, { session: '[ClientSession]' }).sort([ [ '_id', 1 ] ]).toArray();",
  "[migrator] Processing 'Migration20191013214813'",
  "db.getCollection('mikro_orm_migrations').deleteMany({ name: { '$in': [ 'Migration20191013214813', 'Migration20191013214813' ] } }, { session: '[ClientSession]' });",
  "[migrator] Reverted 'Migration20191013214813'",
  "db.commit();",
]
`;

exports[`Migrator (mongo) up/down with explicit transaction: explicit-tx 1`] = `
[
  "db.begin();",
  "db.getCollection('mikro_orm_migrations').find({}, { session: '[ClientSession]' }).sort([ [ '_id', 1 ] ]).toArray();",
  "[migrator] Processing 'Migration20200922100001'",
  "db.getCollection('mikro_orm_migrations').insertOne({ name: 'Migration20200922100001', executed_at: ISODate(...) }, { session: '[ClientSession]' });",
  "[migrator] Applied 'Migration20200922100001'",
  "[migrator] Processing 'Migration20200922100002'",
  "db.getCollection('mikro_orm_migrations').insertOne({ name: 'Migration20200922100002', executed_at: ISODate(...) }, { session: '[ClientSession]' });",
  "[migrator] Applied 'Migration20200922100002'",
  "db.getCollection('mikro_orm_migrations').find({}, { session: '[ClientSession]' }).sort([ [ '_id', 1 ] ]).toArray();",
  "[migrator] Processing 'Migration20200922100002'",
  "db.getCollection('mikro_orm_migrations').deleteMany({ name: { '$in': [ 'Migration20200922100002', 'Migration20200922100002' ] } }, { session: '[ClientSession]' });",
  "[migrator] Reverted 'Migration20200922100002'",
  "db.getCollection('mikro_orm_migrations').find({}, { session: '[ClientSession]' }).sort([ [ '_id', 1 ] ]).toArray();",
  "[migrator] Processing 'Migration20200922100001'",
  "db.getCollection('mikro_orm_migrations').deleteMany({ name: { '$in': [ 'Migration20200922100001', 'Migration20200922100001' ] } }, { session: '[ClientSession]' });",
  "[migrator] Reverted 'Migration20200922100001'",
  "db.getCollection('mikro_orm_migrations').find({}, { session: '[ClientSession]' }).sort([ [ '_id', 1 ] ]).toArray();",
  "db.commit();",
]
`;
